test_suite/tests/ui/expected-string/boolean.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> $DIR/boolean.rs:6:22
  |
6 |     #[serde(rename = true)]
  |                      ^^^^

error: aborting due to previous error

